# tape-sorting

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  cli.cpp  cli.hpp  foo.cpp  foo.hpp  interfaces.h  main.cpp
src/tape/: CMakeLists.txt  base-interfaces.hpp  interfaces.hpp  sort.cpp  sort.hpp  tape-file.cpp  tape-file.hpp  tape-interface.hpp
ut/: CMakeLists.txt  addition_ut.cpp  tape_ut.cpp
